<resources>
    <string name="app_name">GiaiTriViet</string>
    <string name="twitter_api_consumer_key" translatable="false">YOURCONSUMERKEYHERE</string>
    <string name="twitter_api_consumer_secret_key" translatable="false">YOURSECRETKEYHERE</string>
    <string name="google_server_key" translatable="false">AIzaSyAcleYyYy-Ha_GGf54A9kue4EvS7VXCaQg</string>
    <string name="google_android_key" translatable="false">AIzaSyArx1CjlD_BNcAlAiW_KPTFC0ZiCEw0hjM</string>
    <string name="instagram_access_token" translatable="false">3150037748.11d2f00.f4b012fcd31f471095eb3489bc8f8a53</string>
    <string name="facebook_access_token" translatable="false">1797166320531127|cHPQXeWdRL83csBlExgAL8Wolps</string>
    <string name="soundcloud_id" translatable="false">YOURSOUNDCLOUDIDHERE</string>
    <string name="about_text">A collection of Viet entertainment<![CDATA[
    <b>Version 1.0.8</b>
    <br><br>Thank you for downloading our app<br><br>
    <i>By NghiaNH&#174;</i>
    ]]></string>
    <string name="google_play_license" translatable="false"></string>
    <string name="product_id" translatable="false"></string>
    <string name="ad_id" translatable="false">ca-app-pub-8092675209428225/9976743793</string>
    <string name="interstitialAd_id" translatable="false">ca-app-pub-8092675209428225/3361473796</string>
    <string name="rss_push_url" translatable="false">https://zapier.com/engine/rss/1804305/giaitriviet/</string>
    <string name="name">Name</string>
    <string name="username" translatable="false">Username</string>
    <string name="profile_image">Profile image</string>
    <string name="message">Message</string>
    <string name="tweet_share_header" translatable="false">\'s tweet</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="feed_title_value" translatable="false">Feed title</string>
    <string name="feed_link_value">Feed description</string>
    <string name="feed_description_value" translatable="false">Feed link</string>
    <string name="btn_video" translatable="false">Play video</string>
    <string name="btn_audio" translatable="false">Play audio</string>
    <string name="video_search_hint" translatable="false">Search this Channel</string>
    <string name="play_button" translatable="false">Play</string>
    <string name="video_share_begin" translatable="false">"I just saw this video: "</string>
    <string name="video_share_middle" translatable="false">" in the \""</string>
    <string name="video_share_end" translatable="false">\" app</string>
    <string name="video_subtitle_start" translatable="false">"Uploaded at "</string>
    <string name="video_subtitle_end" translatable="false">" by "</string>
    <string name="webview_title" translatable="false">Web</string>
    <string name="web_share_begin">"Look what I saw in the \""</string>
    <string name="web_share_end" translatable="false">"\"app: "</string>
    <string name="item_del_text">You are about to delete all your favorites</string>
    <string name="item_del_confirmation">I know</string>
    <string name="no_favorites" translatable="false">Your can add (more) favorites by opening an item and selecting \"favorite\"</string>
    <string name="favorite_success">The item has been added</string>
    <string name="favorite_duplicate">This item has already been added</string>
    <string name="favorite_menu_delete">Delete</string>
    <string name="settings_general_summary" translatable="false">Username and password information</string>
    <string name="settings_general" translatable="false">General</string>
    <string name="settings_showmenu_summary" translatable="false">Yes/No</string>
    <string name="settings_showmenu" translatable="false">Show side menu on start</string>
    <string name="settings_rssnotify_summary" translatable="false">Get informed when there are new articles</string>
    <string name="settings_rssnotify">Notifications</string>
    <string name="settings_fontsize_summary" translatable="false">Preferred text size for articles and posts</string>
    <string name="settings_fontsize">Text size</string>
    <string name="settings_fontsize_xl">Extra Large</string>
    <string name="settings_fontsize_l" translatable="false">Large</string>
    <string name="settings_fontsize_m" translatable="false">Default</string>
    <string name="settings_fontsize_s" translatable="false">Small</string>
    <string name="settings_fontsize_xs">Extra Small</string>
    <string name="settings_other_summary">Other information</string>
    <string name="settings_other">Other</string>
    <string name="settings_aboutus_summary">Information about our application</string>
    <string name="settings_aboutus" translatable="false">About</string>
    <string name="settings_rate_summary">Help other users enjoy this application</string>
    <string name="settings_rate">Rate this app</string>
    <string name="settings_billing_summary" translatable="false">Manage your In-App purchases</string>
    <string name="settings_billing" translatable="false">In-App Products.</string>
    <string name="settings_purchase_summary" translatable="false">Removes ads and unlocks more content</string>
    <string name="settings_purchase" translatable="false">Unlock extra features</string>
    <string name="settings_restore_purchase_success">Previous purchases have been restored.</string>
    <string name="settings_purchase_success" translatable="false">Previous purchases have been restored.</string>
    <string name="settings_purchase_fail" translatable="false">Purchase failed.</string>
    <string name="dialog_purchase_title">Content locked.</string>
    <string name="dialog_purchase">In order to view this content, you need to unlock the full version by making a one time purchase.\n\nThis will also remove advertisements throughout the app.</string>
    <string name="wordpress_subtitle_start" translatable="false">"Published "</string>
    <string name="wordpress_subtitle_end" translatable="false">" by "</string>
    <string name="navigate" translatable="false">Navigate</string>
    <string name="maps_location_title">Waiting for location...</string>
    <string name="maps_location_subtitle">Make sure GPS is on</string>
    <string name="volume_low">Turn your volume up!</string>
    <string name="file_audio" translatable="false">Audio</string>
    <string name="file_video" translatable="false">Video</string>
    <string name="file_image" translatable="false">Image</string>
    <string name="now_playing">Now playing</string>
    <string name="notification_playing">Playing audio - Live Stream</string>
    <string name="error_retry">Failed to connect to stream... We have restarted the mediadecoder, please try again.</string>
    <string name="radio_playing_other">Already Playing another station. Press stop and select play again to play the station you have just selected.</string>
    <string name="downloadmanager_disabled">Download manager needs to be enabled</string>
    <string name="image_descr" translatable="false">Image</string>
    <string name="set" translatable="false">Set</string>
    <string name="save">Save</string>
    <string name="tumblr_share_begin" translatable="false">Check out this post I saw in</string>
    <string name="saved">Saved at:</string>
    <string name="set_confirm" translatable="false">Are you sure you would like to set this image as wallpaper?</string>
    <string name="set_success" translatable="false">You have set a new Wallpaper!</string>
    <string name="duration" translatable="false">%1$d:%2$02d</string>
    <string name="toast_track_added" translatable="false">Added to the playlist. Touch again to play now.</string>
    <string name="playback_view_time" translatable="false">%1$02d:%2$02d</string>
    <string name="playback_view_title" translatable="false">&lt;b>%1$s&lt;/b> - %2$s</string>
    <string name="share_header">Share</string>
    <string name="about_header">About</string>
    <string name="favorite_button">Favorite</string>
    <string name="open_button">Open</string>
    <string name="textview_date" translatable="false">"Date: "</string>
    <string name="loading">Loading..</string>
    <string name="opening_video">Opening video</string>
    <string name="opening_audio">Opening audio</string>
    <string name="downloading">Downloading..</string>
    <string name="empty_textview">Error loading data</string>
    <string name="no_results">No results</string>
    <string name="yes" translatable="false">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="comments">Comments</string>
    <string name="share">Share</string>
    <string name="info">Info</string>
    <string name="refresh">Refresh</string>
    <string name="already_loading">We are already loading some new content!</string>
    <string name="intent_failed">Failed to start external application.</string>
    <string name="drawer_open" translatable="false">Menu opened</string>
    <string name="drawer_close" translatable="false">Menu closed</string>
    <string name="permissions_required">You need to accept all required permissions to access this content.</string>
    <string name="dialog_connection_title">No connection</string>
    <string name="dialog_connection_description">We can not reach our servers at the moment.\n\nYou can always check you favorites and other items using the menu!</string>
    <string name="dialog_internet_title">No internet</string>
    <string name="dialog_internet_description">You seem to have no internet connection, this app requires internet to get the latest content.\n\nYou can continue to see your favorite/offline items!</string>
    <string name="dialog_exit">Are you sure you want to exit?</string>
    <string name="dialog_download">Downloading file. Please wait...</string>
    <string name="SETTING_URL" translatable="false">http://textuploader.com/53hcw/raw</string>
    <string name="SETTING_YT_URL" translatable="false">http://nhuaso9.com/List_YT.txt</string>
    <string name="report_die_link">Report this channel was died link?</string>
    <string name="description_material_metaphor">Includes the latest news of the day in news sites, radio stations, television channels leading.</string>
    <string name="description_material_bold">Modern interface, simple operation, application watching television, except the lightest news ever.</string>
    <string name="description_material_motion">This application will be free until it is no longer free anymore. Maybe TV providers will prohibit this application activities for the free sharing of it..</string>
    <string name="description_material_shadow">Within the material environment, virtual lights illuminate the scene. Key lights create directional shadows, while ambient light creates soft shadows from all angles.</string>
    <string name="title_material_metaphor">An application developed by Vietnamese</string>
    <string name="title_material_bold">Fast, light, simple</string>
    <string name="title_material_motion">Always free</string>
    <string name="title_material_shadow" translatable="false">Light and shadow</string>
    <string name="invitation_title">I found a good TV online app here</string>
    <string name="invitation_message">All lastest new, television, radio channel in Vietnam can be found here</string>
    <string name="invitation_deep_link">https://mq784.app.goo.gl/qL6j</string>
    <string name="invitation_cta">Install!</string>
    <string name="invitation_custom_image">https://lh3.googleusercontent.com/BsNV6voYAUefnthsfCJgRW6svVBwy9V_pNsS0pcFVQa9fLGkcCuEnDvwQyI4fF7qczEM=w300-rw</string>
    <string name="send_failed">Send invitation failed!</string>
    <string name="google_play_services_error">google_play_services_error</string>
    <string name="label_grant_permissions"></string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_tv" translatable="false">TVActivity</string>
</resources>