<?xml version="1.0" encoding="utf-8"?><FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="match_parent"    android:layout_height="wrap_content"    android:descendantFocusability="blocksDescendants">    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginBottom="2dp"        android:layout_marginTop="2dp"        android:background="@drawable/card_background"        android:elevation="2dp"        android:orientation="vertical">        <LinearLayout            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:orientation="vertical"            android:paddingLeft="16dp"            android:paddingRight="16dp"            android:paddingTop="16dp">            <RelativeLayout                android:id="@+id/RelativeLayout1"                android:layout_width="fill_parent"                android:layout_height="wrap_content">                <ImageView                    android:id="@+id/profile_image"                    android:layout_width="wrap_content"                    android:layout_height="35dp"                    android:adjustViewBounds="true"                    android:contentDescription="@string/profile_image"                    android:scaleType="centerInside"                    android:src="@mipmap/ic_launcher" />                <LinearLayout                    android:layout_width="fill_parent"                    android:layout_height="wrap_content"                    android:layout_centerVertical="true"                    android:layout_toEndOf="@+id/profile_image"                    android:layout_toLeftOf="@+id/retweet_container"                    android:layout_toRightOf="@+id/profile_image"                    android:layout_toStartOf="@+id/retweet_container"                    android:gravity="center_vertical"                    android:orientation="vertical">                    <LinearLayout                        android:layout_width="wrap_content"                        android:layout_height="wrap_content"                        android:orientation="horizontal">                        <TextView                            android:id="@+id/name"                            android:layout_width="wrap_content"                            android:layout_height="wrap_content"                            android:hint="@string/name"                            android:textStyle="bold" />                        <TextView                            android:id="@+id/username"                            android:layout_width="wrap_content"                            android:layout_height="wrap_content"                            android:hint="@string/username"                            android:paddingLeft="5dp"                            android:textColor="@color/gray" />                    </LinearLayout>                    <TextView                        android:id="@+id/date"                        android:layout_width="wrap_content"                        android:layout_height="wrap_content"                        android:hint="@string/username"                        android:textSize="12.0sp"                        android:textStyle="italic" />                </LinearLayout>                <LinearLayout                    android:id="@+id/retweet_container"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_alignParentEnd="true"                    android:layout_alignParentRight="true"                    android:orientation="horizontal"                    android:paddingLeft="5dp">                    <ImageView                        android:layout_width="wrap_content"                        android:layout_height="35dp"                        android:layout_gravity="center_vertical"                        android:adjustViewBounds="true"                        android:contentDescription="@string/profile_image"                        android:scaleType="centerInside"                        android:src="@drawable/ic_action_retweet" />                    <TextView                        android:id="@+id/retweet_count"                        android:layout_width="wrap_content"                        android:layout_height="wrap_content"                        android:layout_gravity="center_vertical"                        android:text=""                        android:textColor="@color/dim_gray"                        android:textSize="16dp" />                </LinearLayout>            </RelativeLayout>            <LinearLayout                android:id="@+id/LinearLayout2"                android:layout_width="fill_parent"                android:layout_height="wrap_content"                android:orientation="vertical">                <TextView                    android:id="@+id/message"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_marginTop="10.0dip"                    android:autoLink="web"                    android:hint="@string/message"                    android:textAppearance="?android:textAppearanceSmall"                    android:textColorLink="@color/twitter"                    android:textDirection="locale"                    android:textSize="14sp" />            </LinearLayout>        </LinearLayout>        <ImageView            android:id="@+id/photo"            android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:adjustViewBounds="true"            android:paddingTop="8dp" />        <LinearLayout            android:id="@+id/LinearLayout3"            android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:orientation="horizontal">            <Button                android:id="@+id/share"                style="?android:attr/borderlessButtonStyle"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:text="@string/share"                android:textColor="@color/myAccentColor" />            <Button                android:id="@+id/open"                style="?android:attr/borderlessButtonStyle"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:text="@string/open_button"                android:textColor="@color/myAccentColor" />        </LinearLayout>    </LinearLayout></FrameLayout>